--- a/style.css
+++ b/style.css
@@ -412,8 +412,8 @@ canvas {
 }
 
 .modal-content img {
-	width: 600px;
-	height: auto;
+	width: 500px;
+	height: 500px;
 	border-radius: 10px;
 }
 .modal-content p {
