--- a/style.css
+++ b/style.css
@@ -134,9 +134,14 @@ canvas {
 	transform: translate(-50%, -50%);
 	text-align: center;
 	font-size: 1.2em;
-	border-radius: 0.9em;
-	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6);
 	overflow: hidden;
+	/* From https://css.glass */
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 16px;
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #menu .title h1 {
@@ -190,30 +195,6 @@ canvas {
 	position: relative;
 	display: inline-block;
 	margin-bottom: 1em;
-}
-
-#starry_night_bg {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-image: url("https://th.bing.com/th/id/R.cf8cb0d1a972300c5e60b3ebf20b5779?rik=QLOj5Ukvu%2brJNQ&pid=ImgRaw&r=0");
-	background-size: cover;
-	background-position: center;
-	z-index: -1;
-	animation: panBg 30s linear infinite;
-	background-attachment: fixed;
-}
-
-#starry_night_bg:before {
-	content: "";
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: rgba(0, 0, 0, 0.4);
 }
 
 @keyframes panBg {
@@ -408,7 +389,7 @@ canvas {
 	border-radius: 10px;
 	border: 1px solid #888;
 	width: 70%;
-  margin: 100px auto;
+	margin: 100px auto;
 }
 
 .modal-content img {
